--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>X-Fit - The Future of Fitness</title>
+    <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"> <!-- Font Awesome -->
     <style>
-        /* Custom Styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
         }
 
+        header.navbar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+        }
+
         .hero-section {
-            background: url('https://via.placeholder.com/1500x800') no-repeat center center;
+            background: url("static/images/bgimg.jpg") no-repeat center center;
             background-size: cover;
             color: white;
             height: 100vh;
@@ -24,16 +33,25 @@
             justify-content: center;
             align-items: center;
             text-align: center;
+            padding-top: 80px;
+            transition: all 0.3s ease;
         }
 
         .hero-section h1 {
-            font-size: 4rem;
+            font-size: 3rem;
             margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         }
 
         .hero-section .btn {
-            font-size: 1.2rem;
-            padding: 10px 30px;
+            font-size: 1.4rem;
+            padding: 12px 40px;
+            border-radius: 50px;
+            transition: background-color 0.3s ease;
+        }
+
+        .hero-section .btn:hover {
+            background-color: #ff9800;
         }
 
         .section-padding {
@@ -49,6 +67,22 @@
             margin: 15px 0;
         }
 
+        .feature-list h4 {
+            font-size: 1.2rem;
+            font-weight: bold;
+        }
+
+        .feature-list p {
+            font-size: 1rem;
+            color: #555;
+        }
+
+        .feature-list i {
+            font-size: 2.5rem;
+            color: #ff9800;
+            margin-bottom: 15px;
+        }
+
         .footer {
             background-color: #333;
             color: white;
@@ -58,11 +92,24 @@
 
         .footer a {
             color: #ddd;
+            padding: 0 10px;
         }
 
         .footer .timer {
             font-size: 1.2rem;
             font-weight: bold;
+            animation: glow 1.5s infinite alternate;
+        }
+
+        @keyframes glow {
+            0% {
+                text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #FFD700;
+                color: #0a1301;
+            }
+            100% {
+                text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #FFD700;
+                color: #0f0e0f;
+            }
         }
 
         .email-signup {
@@ -79,20 +126,50 @@
         }
 
         .btn-primary {
-            padding: 10px 30px;
+            padding: 12px 40px;
             font-size: 1.2rem;
+            border-radius: 50px;
         }
 
         .error {
             color: red;
             font-size: 0.875rem;
         }
+
+        @media (max-width: 767px) {
+            .hero-section h1 {
+                font-size: 2.5rem;
+            }
+
+            .hero-section .btn {
+                font-size: 1.1rem;
+                padding: 10px 30px;
+            }
+
+            .form-inline {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .form-group {
+                width: 100%;
+                margin-bottom: 15px;
+            }
+
+            .form-control {
+                width: 90%;
+                margin: 0 auto;
+            }
+
+            .footer .timer {
+                font-size: 1rem;
+            }
+        }
     </style>
 </head>
 
 <body>
 
-    <!-- Header -->
     <header class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">X-Fit</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -101,32 +178,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">How It Works</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sign Up</a>
-                </li>
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="#"><b>Sign Up</b></a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Blogs</a></li>
             </ul>
         </div>
     </header>
 
-    <!-- Hero Section -->
     <section class="hero-section">
         <h1>The Future of Fitness, Coming Soon!</h1>
-        <a href="#signup" class="btn btn-primary">Get Early Access</a>
+        <a href="#signup" class="btn btn-primary"><i class="fas fa-paper-plane"></i> Get Early Access</a>
     </section>
 
-    <!-- What is X-Fit? -->
     <section class="section-padding" id="about">
         <div class="container text-center">
             <h2>Your Personalized Fitness Journey Starts Here</h2>
@@ -135,24 +201,27 @@
         </div>
     </section>
 
-    <!-- Why Choose X-Fit? -->
     <section class="section-padding" id="features">
         <div class="container">
             <h2 class="text-center mb-4">Why Choose X-Fit?</h2>
             <div class="row feature-list">
-                <div class="col-md-6 col-lg-3">
+                <div class="col-md-6 col-lg-3 text-center">
+                    <i class="fas fa-map-marker-alt"></i>
                     <h4>Find Gyms Near You</h4>
                     <p>Locate gyms that match your fitness goals and location.</p>
                 </div>
-                <div class="col-md-6 col-lg-3">
+                <div class="col-md-6 col-lg-3 text-center">
+                    <i class="fas fa-info-circle"></i>
                     <h4>Transparent Gym Profiles</h4>
                     <p>Get detailed gym profiles with reviews, pricing, and available services.</p>
                 </div>
-                <div class="col-md-6 col-lg-3">
+                <div class="col-md-6 col-lg-3 text-center">
+                    <i class="fas fa-dumbbell"></i>
                     <h4>Gym Accessories & Services</h4>
                     <p>Browse a range of gym accessories and services to enhance your workout.</p>
                 </div>
-                <div class="col-md-6 col-lg-3">
+                <div class="col-md-6 col-lg-3 text-center">
+                    <i class="fas fa-bullseye"></i>
                     <h4>Tailored Recommendations</h4>
                     <p>Get personalized gym and fitness recommendations based on your preferences.</p>
                 </div>
@@ -160,7 +229,6 @@
         </div>
     </section>
 
-    <!-- How It Works -->
     <section class="section-padding" id="how-it-works">
         <div class="container">
             <h2 class="text-center mb-4">How It Works</h2>
@@ -181,120 +249,38 @@
         </div>
     </section>
 
-    <!-- Sign Up Section -->
     <section class="email-signup" id="signup">
         <div class="container text-center">
             <h2>Be the First to Experience X-Fit!</h2>
             <form id="signupForm" class="form-inline justify-content-center mt-4" method="post" action="">
                 <div class="form-group">
-                    <input type="text" class="form-control mr-2" name="name" id="name" placeholder="Enter your name"
-                        required>
+                    <input type="text" class="form-control mr-2" name="name" id="name" placeholder="Enter your name" required>
                 </div>
                 <div class="form-group">
-                    <input type="email" class="form-control mr-2" name="email" id="email" placeholder="Enter your email"
-                        required>
+                    <input type="email" class="form-control mr-2" name="email" id="email" placeholder="Enter your email" required>
                     <div id="emailError" class="error"></div>
                 </div>
                 <div class="form-group">
-                    <input type="tel" class="form-control mr-2" name="whatsapp" id="whatsapp"
-                        placeholder="Enter your WhatsApp number" required>
+                    <input type="tel" class="form-control mr-2" name="whatsapp" id="whatsapp" placeholder="Enter your WhatsApp number" required>
                     <div id="phoneError" class="error"></div>
                 </div>
                 <input type="hidden" id="date" name="date">
-                <button type="submit" class="btn btn-primary">Sign Up Now!</button>
+                <button type="submit" class="btn btn-primary" id="submitBtn">Sign Up Now!</button>
             </form>
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <p>&copy; 2024 X-Fit. All Rights Reserved.</p>
         <div>
             <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">Twitter</a>
         </div>
         <p class="timer">Live in: 30 days</p>
-        <!-- <a href="#signup" class="btn btn-outline-light">Get Early Access</a> -->
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <!-- Corrected Scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> <!-- Full jQuery -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <!-- Latest Popper -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> <!-- Bootstrap JS -->
-
-    <script>
-        console.log("this is under the script...!!")
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbwRVBI4j9cVsuWCBb3XKp0uK4L-0SbqHxVYeNcbI3Qhy7s5LJdjmRaBcxW1UN_uxLUDIg/exec'
-
-
-        const form = document.getElementById('signupForm');
-
-        // Email Validation
-        function validateEmail(email) {
-            const regex = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$/;
-            return regex.test(email);
-        }
-
-        // Phone Number Validation
-        function validatePhone(phone) {
-            const regex = /^[0-9]{10,15}$/; // A simple phone number validation
-            return regex.test(phone);
-        }
-
-        // Function to format date as yyyy-mm-dd hour:minute:sec
-        function formatDate(date) {
-            const year = date.getFullYear();
-            const month = String(date.getMonth() + 1).padStart(2, '0'); // Month is 0-indexed, so add 1
-            const day = String(date.getDate()).padStart(2, '0');
-            const hour = String(date.getHours()).padStart(2, '0');
-            const minute = String(date.getMinutes()).padStart(2, '0');
-            const second = String(date.getSeconds()).padStart(2, '0');
-
-            return `${year}-${month}-${day} ${hour}:${minute}:${second}`;
-        }
-
-        form.addEventListener('submit', e => {
-            e.preventDefault();
-
-            // Get the current date and format it
-            const currentDate = new Date();
-            const formattedDate = formatDate(currentDate);
-
-            // Set the formatted date in the hidden input field
-            document.getElementById('date').value = formattedDate;
-
-            const email = document.getElementById('email').value;
-            const phone = document.getElementById('whatsapp').value;
-            let valid = true;
-
-            // Clear previous errors
-            document.getElementById('emailError').textContent = '';
-            document.getElementById('phoneError').textContent = '';
-
-            if (!validateEmail(email)) {
-                document.getElementById('emailError').textContent = 'Please enter a valid email address.';
-                valid = false;
-            }
-
-            if (!validatePhone(phone)) {
-                document.getElementById('phoneError').textContent = 'Please enter a valid phone number.';
-                valid = false;
-            }
-
-            if (valid) {
-                fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-                    .then(response => alert("Thank you! Form is submitted"))
-                    .then(() => { window.location.reload(); })
-                    .catch(error => console.error('Error!', error.message));
-            }
-        });
-    </script>
-
-
 </body>
-
 </html>
