--- a/index.html
+++ b/index.html
@@ -282,5 +282,90 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+    <script>
+        console.log("this is under the script...!!")
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwRVBI4j9cVsuWCBb3XKp0uK4L-0SbqHxVYeNcbI3Qhy7s5LJdjmRaBcxW1UN_uxLUDIg/exec'
+
+        const form = document.getElementById('signupForm');
+
+        // Email Validation
+        function validateEmail(email) {
+            const regex = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$/;
+            return regex.test(email);
+        }
+
+        // Phone Number Validation
+        function validatePhone(phone) {
+            const regex = /^[0-9]{10,15}$/; // A simple phone number validation
+            return regex.test(phone);
+        }
+
+        // Function to format date as yyyy-mm-dd hour:minute:sec
+        function formatDate(date) {
+            const year = date.getFullYear();
+            const month = String(date.getMonth() + 1).padStart(2, '0'); // Month is 0-indexed, so add 1
+            const day = String(date.getDate()).padStart(2, '0');
+            const hour = String(date.getHours()).padStart(2, '0');
+            const minute = String(date.getMinutes()).padStart(2, '0');
+            const second = String(date.getSeconds()).padStart(2, '0');
+
+            return `${year}-${month}-${day} ${hour}:${minute}:${second}`;
+        }
+
+        form.addEventListener('submit', e => {
+            e.preventDefault();
+
+            // Get the current date and format it
+            const currentDate = new Date();
+            const formattedDate = formatDate(currentDate);
+
+            // Set the formatted date in the hidden input field
+            document.getElementById('date').value = formattedDate;
+
+            const email = document.getElementById('email').value;
+            const phone = document.getElementById('whatsapp').value;
+            let valid = true;
+
+            // Clear previous errors
+            document.getElementById('emailError').textContent = '';
+            document.getElementById('phoneError').textContent = '';
+
+            if (!validateEmail(email)) {
+                document.getElementById('emailError').textContent = 'Please enter a valid email address.';
+                valid = false;
+            }
+
+            if (!validatePhone(phone)) {
+                document.getElementById('phoneError').textContent = 'Please enter a valid phone number.';
+                valid = false;
+            }
+
+            if (valid) {
+                // Change button text to "Submitting..." and disable it
+                const submitButton = document.getElementById('submitBtn');
+                submitButton.textContent = 'Submitting...';
+                submitButton.disabled = true;
+
+                // Submit the form via fetch
+                fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                    .then(response => {
+                        alert("Thank you! Form is submitted");
+                    })
+                    .then(() => {
+                        // Re-enable the button and reset its text after submission
+                        submitButton.textContent = 'Sign Up Now!';
+                        submitButton.disabled = false;
+                    })
+                    .catch(error => {
+                        // Handle any errors
+                        console.error('Error!', error.message);
+                        submitButton.textContent = 'Sign Up Now!';
+                        submitButton.disabled = false;
+                    });
+            }
+        });
+
+    </script>
+
 </body>
 </html>
