--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>X-Fit - The Future of Fitness</title>
     <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"> <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -40,7 +40,7 @@
         .hero-section h1 {
             font-size: 3rem;
             margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         .hero-section .btn {
@@ -106,6 +106,7 @@
                 text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #FFD700;
                 color: #0a1301;
             }
+
             100% {
                 text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #FFD700;
                 color: #0f0e0f;
@@ -119,6 +120,7 @@
 
         .form-control {
             max-width: 400px;
+            width: 100%;
         }
 
         .form-group {
@@ -146,6 +148,10 @@
                 padding: 10px 30px;
             }
 
+            .section-padding {
+                padding: 40px 0;
+            }
+
             .form-inline {
                 flex-direction: column;
                 align-items: center;
@@ -164,6 +170,24 @@
             .footer .timer {
                 font-size: 1rem;
             }
+
+            .feature-list .col-md-6 {
+                margin-bottom: 20px;
+            }
+        }
+
+        @media (max-width: 992px) {
+            .hero-section h1 {
+                font-size: 2.8rem;
+            }
+
+            .hero-section .btn {
+                font-size: 1.3rem;
+            }
+
+            .feature-list .col-md-6 {
+                text-align: center;
+            }
         }
     </style>
 </head>
@@ -178,12 +202,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="#"><b>Sign Up</b></a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Blogs</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html#about">Features</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html#about">How It Works</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="index.html#signup"><b>Sign Up</b></a></li>
+                <li class="nav-item"><a class="nav-link" href="blog.html">Blogs</a></li>
             </ul>
         </div>
     </header>
@@ -196,8 +220,7 @@
     <section class="section-padding" id="about">
         <div class="container text-center">
             <h2>Your Personalized Fitness Journey Starts Here</h2>
-            <p>Discover a fitness platform that caters to your unique needs. Find gyms, explore services, and get
-                personalized recommendations.</p>
+            <p>Discover a fitness platform that caters to your unique needs. Find gyms, explore services, and get personalized recommendations.</p>
         </div>
     </section>
 
@@ -249,21 +272,36 @@
         </div>
     </section>
 
-    <section class="email-signup" id="signup">
+    <section class="section-padding" id="signup">
         <div class="container text-center">
             <h2>Be the First to Experience X-Fit!</h2>
             <form id="signupForm" class="form-inline justify-content-center mt-4" method="post" action="">
                 <div class="form-group">
-                    <input type="text" class="form-control mr-2" name="name" id="name" placeholder="Enter your name" required>
+                    <input type="text" class="form-control" name="name" id="name" placeholder="Enter your name" required>
                 </div>
                 <div class="form-group">
-                    <input type="email" class="form-control mr-2" name="email" id="email" placeholder="Enter your email" required>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Enter your email" required>
                     <div id="emailError" class="error"></div>
                 </div>
                 <div class="form-group">
-                    <input type="tel" class="form-control mr-2" name="whatsapp" id="whatsapp" placeholder="Enter your WhatsApp number" required>
+                    <input type="tel" class="form-control" name="whatsapp" id="whatsapp" placeholder="Enter your WhatsApp number" required>
                     <div id="phoneError" class="error"></div>
                 </div>
+
+                <div class="form-group">
+                    <label for="source">Where did you hear about us?</label>
+                    <select id="source" name="source" class="form-control" required onchange="toggleOtherField()">
+                        <option value="social_media">Social Media</option>
+                        <option value="friend_referral">Friend Referral</option>
+                        <option value="online_ads">Online Ads</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+
+                <div class="form-group" id="otherField" style="display: none;">
+                    <input type="text" class="form-control" name="other_source" id="other_source" placeholder="Please specify">
+                </div>
+
                 <input type="hidden" id="date" name="date">
                 <button type="submit" class="btn btn-primary" id="submitBtn">Sign Up Now!</button>
             </form>
@@ -283,9 +321,17 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
-        console.log("this is under the script...!!")
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbwRVBI4j9cVsuWCBb3XKp0uK4L-0SbqHxVYeNcbI3Qhy7s5LJdjmRaBcxW1UN_uxLUDIg/exec'
-
+        // Function to toggle the "Other" text input visibility
+        function toggleOtherField() {
+            const source = document.getElementById('source').value;
+            const otherField = document.getElementById('otherField');
+            if (source === 'other') {
+                otherField.style.display = 'block';
+            } else {
+                otherField.style.display = 'none';
+            }
+        }
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwRVBI4j9cVsuWCBb3XKp0uK4L-0SbqHxVYeNcbI3Qhy7s5LJdjmRaBcxW1UN_uxLUDIg/exec';
         const form = document.getElementById('signupForm');
 
         // Email Validation
@@ -350,6 +396,11 @@
                 fetch(scriptURL, { method: 'POST', body: new FormData(form) })
                     .then(response => {
                         alert("Thank you! Form is submitted");
+
+                        // Clear the form fields after successful submission
+                        form.reset();
+
+                        // Optionally, show a success message or redirect
                     })
                     .then(() => {
                         // Re-enable the button and reset its text after submission
