fear : metaTags and newEmailBody

--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+ <!-- Title and Description for SEO -->
+ <title>X-Fit - The Future of Fitness</title>
+ <meta name="description" content="X-Fit is your go-to platform to find trusted, verified gyms near you. Simplify your fitness journey and discover local gyms with ease. Join the X-Fit movement today!">
+ 
+ <!-- Keywords for SEO -->
+ <meta name="keywords" content="fitness, gyms, X-Fit, gym near me, best gyms, fitness journey, verified gyms, workout space, gym recommendations, Bangalore gyms">
+ 
+ <!-- Author Information -->
+ <meta name="author" content="X-Fit Team">
+ 
+ <!-- Open Graph Meta Tags (For social media sharing) -->
+ <meta property="og:title" content="X-Fit - The Future of Fitness">
+ <meta property="og:description" content="X-Fit helps you find verified, high-quality gyms in your area with ease. Join the X-Fit movement and get fit without the hassle of endless searching.">
+ <meta property="og:image" content="static/images/xfit-logo.png">
+ <meta property="og:url" content="https://www.xfit.com">
+ <meta property="og:type" content="website">
+ 
+ <!-- Twitter Card Meta Tags -->
+ <meta name="twitter:card" content="summary_large_image">
+ <meta name="twitter:title" content="X-Fit - The Future of Fitness">
+ <meta name="twitter:description" content="Join the X-Fit movement and easily discover gyms near you. Find verified gyms and fitness spaces that suit your needs.">
+ <meta name="twitter:image" content="static/images/xfit-logo.png">
+    
     <title>X-Fit - The Future of Fitness</title>
     <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -160,7 +184,7 @@
                 otherField.style.display = 'none';
             }
         }
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbwRVBI4j9cVsuWCBb3XKp0uK4L-0SbqHxVYeNcbI3Qhy7s5LJdjmRaBcxW1UN_uxLUDIg/exec';
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwStTmurJguLHuXqmIeuH_o5yT79XKMqXhFjubHt3feN8C6CuKTV4UK43OpjXozNTH-sg/exec';
         const form = document.getElementById('signupForm');
 
         // Email Validation
