--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="aboutUs.html">AboutUs</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#about">Features</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#about">How It Works</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="index.html#signup"><b>Sign Up</b></a></li>
@@ -125,8 +125,8 @@
         <div class="container text-center">
             <h2>Be the First to Experience X-Fit!</h2>
             <div class="form-container" style="border: 2px solid #ccc; padding: 20px; border-radius: 10px; background-color: #f9f9f9;">
-                <form id="signupForm" class="form-inline justify-content-center mt-4" method="post" action="">
-                    <div class="form-group">
+                <form id="signupForm" class=" d-flex flex-column justify-content-center align-items-center" method="post" action="">
+                    <div class="form-group justify-content-center">
                         <input type="text" class="form-control" name="name" id="name" placeholder="Enter your name" required>
                     </div>
                     <div class="form-group">
