--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="aboutUs.html">AboutUs</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#about">Features</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#about">How It Works</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="index.html#signup"><b>Sign Up</b></a></li>
