--- a/index.html
+++ b/index.html
@@ -162,9 +162,104 @@
     </section>
     
     <footer class="footer">
-        <p>&copy; 2024 X-Fit. All Rights Reserved.</p>
-        <div>
-            <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">Twitter</a>
+        <div class="left">
+            <img alt="X-Fit logo" src="static/images/xfit.jpg" />
+            <p>
+                Join our newsletter to stay up to date on features and releases.
+            </p>
+            <form>
+                <input placeholder="Enter your email" type="email" />
+                <button type="submit">
+                    SUBSCRIBE
+                </button>
+            </form>
+            <p>
+                By subscribing you agree to with our Privacy Policy and provide consent to receive updates from our company.
+            </p>
+        </div>
+        <div class="center">
+            <h3>
+                Gym
+            </h3>
+            <a href="#">
+                Membership
+            </a>
+            <a href="#">
+                Contact
+            </a>
+            <a href="#">
+                Locations
+            </a>
+            <a href="#">
+                Pricing
+            </a>
+            <a href="#">
+                Review
+            </a>
+        </div>
+        <div class="center">
+            <h3>
+                Lorem Ipsum
+            </h3>
+            <a href="#">
+                Team
+            </a>
+            <a href="#">
+                Lorem
+            </a>
+            <a href="#">
+                Locations
+            </a>
+            <a href="#">
+                Pricing
+            </a>
+            <a href="#">
+                Review
+            </a>
+        </div>
+        <div class="right">
+            <h3>
+                Follow Us
+            </h3>
+            <a href="#">
+                <i class="fab fa-facebook">
+                </i>
+                Facebook
+            </a>
+            <a href="#">
+                <i class="fab fa-instagram">
+                </i>
+                Instagram
+            </a>
+            <a href="#">
+                <i class="fab fa-twitter">
+                </i>
+                X
+            </a>
+            <a href="#">
+                <i class="fab fa-linkedin">
+                </i>
+                LinkedIn
+            </a>
+            <a href="#">
+                <i class="fab fa-youtube">
+                </i>
+                Youtube
+            </a>
+        </div>
+        <div class="bottom">
+            <p>
+                © 2024 X-Fit All rights reserved.
+            </p>
+            <a href="#">
+                Privacy Policy
+            </a>
+            <a href="#">
+                Terms of Service
+            </a>
+            <a href="#">
+                Cookies Settings
+            </a>
         </div>
     </footer>
 
