--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
                 otherField.style.display = 'none';
             }
         }
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbwStTmurJguLHuXqmIeuH_o5yT79XKMqXhFjubHt3feN8C6CuKTV4UK43OpjXozNTH-sg/exec';
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbxy344y-uNQU_GTsGGkZ1LNwmskWBbtaI5AmCQ069Rvkn_piKZHH94eHWAAjQAkLbri9Q/exec';
+        // const scriptURL = 'https://script.google.com/macros/s/AKfycbx6Th_2eXFvTl3sZ8GQ0xwc-S5_EG1xy0jJJh8BldtlkjYlgrEXyyGebGXQQ7R0cVIb/exec';
         const form = document.getElementById('signupForm');
 
         // Email Validation
