--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
                         <div id="emailError" class="error"></div>
                     </div>
                     <div class="form-group">
-                        <label for="source">Whatsapp Number</label>
+                        <label for="source">Phone Number</label>
                         <input type="tel" class="form-control" name="whatsapp" id="whatsapp" placeholder="Enter your WhatsApp number" required>
                         <div id="phoneError" class="error"></div>
                     </div>
-                    
+
                     <!-- New Dropdown for Metro Cities -->
                     <div class="form-group">
                         <label for="city">Select your city</label>
