--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <title>X-Fit - The Future of Fitness</title>
     <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+        <!-- Font Awesome CDN link -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
+
+    
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 
@@ -53,7 +56,7 @@
                 <a href="#">Home</a>
                 <!-- <a href="#signup" class="dropdown">Explore Our Category <i class="fas fa-chevron-down"></i></a> -->
                 <!-- <a href="#signup" class="list-gym">List Your Gym <i class="fas fa-plus"></i></a> -->
-                <a href="#signup">Why X-Fit</a>
+                <a href="#signup">Why X-Fit.</a>
                 <a href="#signup">Contact</a>
                 <a href="#signup">About</a>
                 <a href="#signup">Login</a>
@@ -71,10 +74,10 @@
         <div class="container text-left">
             <div class="row">
                 <div class="col-md-4">
-            <h2><b>Why X-Fit</b></h2>
+            <h2><b>Why X-Fit.</b></h2>
         </div>
         <div class="col-md-8">
-            <p>X-fit is your all-in-one fitness platform, connecting you with high-quality gyms and personalized fitness centers. Discover tailored gym recommendations, manage memberships, and access fitness products—all in one place. Empowering your fitness journey, X-fit simplifies and personalizes wellness like never before.</p>
+            <p>X-Fit. is your all-in-one fitness platform, connecting you with high-quality gyms and personalized fitness centers. Discover tailored gym recommendations, manage memberships, and access fitness products—all in one place. Empowering your fitness journey, X-Fit. simplifies and personalizes wellness like never before.</p>
         </div>
     </div>
     </div>
@@ -136,7 +139,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Transform Your Body</h4>
-                            <p class="card-text">Get enjoy value-added services like fitness accessories, protein-packed meals, and online training classes.</p>
+                            <p class="card-text">Enjoy value-added services like fitness accessories, protein-packed meals, and online training.</p>
                         </div>
                     </div>
                 </div>
@@ -249,19 +252,19 @@
                 Company
             </h3>
             <a href="#signup">
-                Why X-Fit
+                Why X-Fit.
             </a>
             <a href="#signup">
-                Contact
+                Careers
             </a>
             <a href="#signup">
-                About
+                Blog
             </a>
             <a href="#signup">
-                Login
+                Testimonials
             </a>
             <a href="#signup">
-                Home
+                Partnerships
             </a>
         </div>
         <div class="right">
@@ -279,7 +282,7 @@
                 Instagram
             </a>
             <a href="#signup">
-                <i class="fab fa-twitter">
+                <i class="fa-brands fa-x-twitter">
                 </i>
                 X
             </a>
