--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </section>
 
     <section class="section-padding" id="about">
-        <div class="container text-left">
+        <div class="container text-justify">
             <div class="row">
                 <div class="col-md-4">
             <h2><b>Why X-Fit.</b></h2>
