--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
  <!-- Title and Description for SEO -->
- <title>X-Fit - The Future of Fitness</title>
+ <title>X-Fit. - The Future of Fitness</title>
  <meta name="description" content="X-Fit is your go-to platform to find trusted, verified gyms near you. Simplify your fitness journey and discover local gyms with ease. Join the X-Fit movement today!">
  
  <!-- Keywords for SEO -->
@@ -28,7 +28,7 @@
  <meta name="twitter:description" content="Join the X-Fit movement and easily discover gyms near you. Find verified gyms and fitness spaces that suit your needs.">
  <meta name="twitter:image" content="static/images/xfit-logo.png">
     
-    <title>X-Fit - The Future of Fitness</title>
+    <title>X-Fit. - The Future of Fitness</title>
     <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
         <!-- Font Awesome CDN link -->
@@ -85,7 +85,7 @@
 
     <section class="section-padding" id="features">
         <div class="container">
-            <h2 class="text-center mb-4"><b>Why Choose X-Fit</b></h2>
+            <h2 class="text-center mb-4"><b>Why Choose X-Fit.</b></h2>
             <br>
             <div class="row feature-list">
                 <div class="col-md-6 col-lg-3 text-center">
@@ -152,7 +152,7 @@
 
     <section class="section-padding" id="signup">
         <div class="container d-flex flex-column justify-content-center align-items-center">
-            <h2 class="text-center">Be the First to Experience X-Fit!</h2>
+            <h2 class="text-center">Be the First to Experience X-Fit.</h2>
             <div class="form-container">
                 <form id="signupForm" method="post" action="">
                     <div class="form-group">
@@ -213,7 +213,7 @@
 
     <footer class="footer">
         <div class="left">
-            <img alt="X-Fit logo" src="static/images/xfit.jpg" />
+            <img alt="X-Fit. logo" src="static/images/xfit.jpg" />
             <p>
                 Join our newsletter to stay up to date on features and releases.
             </p>
@@ -299,7 +299,7 @@
         </div>
         <div class="bottom">
             <p>
-                © 2025 X-Fit All rights reserved.
+                © 2025 X-Fit. All rights reserved.
             </p>
             <a href="#signup">
                 Privacy Policy
@@ -895,7 +895,7 @@
                 <td valign="top" style="padding:30px 50px 0px 50px;background-color:#ffffff">
                     <p class="paragraph"
                         style="font-family:Open Sans, sans-serif;text-align:left;line-height:27.20px;font-size:16px;margin:0;color:#141414;letter-spacing:0;word-break:normal">
-                        To your health and fitness,<br>Aasim Hussain <br>CEO and Co-Founder, X-Fit <br><span
+                        To your health and fitness,<br>Aasim Hussain <br>CEO and Co-Founder, X-Fit. <br><span
                             style="color:#3962D3"><a href="http://www.xfitclub.in/" data-type="website"
                                 data-id="4a47ef10-5d81-4a5d-905b-3824905559e5-Q1WJor4w_RL4515_DE6rP"
                                 style="color:#3962D3 !important;"
