--- a/index.html
+++ b/index.html
@@ -421,7 +421,9 @@ window.location.hash = target;
         }
     }
     
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbxy344y-uNQU_GTsGGkZ1LNwmskWBbtaI5AmCQ069Rvkn_piKZHH94eHWAAjQAkLbri9Q/exec';
+    // const scriptURL = 'https://script.google.com/macros/s/AKfycbxy344y-uNQU_GTsGGkZ1LNwmskWBbtaI5AmCQ069Rvkn_piKZHH94eHWAAjQAkLbri9Q/exec';
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwa7udWyL_BJIjDevIWZYbYYflS7r5pwW9Z5L35_hLQcWgbPGi6ravzgSRZ5Pa6CLwB/exec';  
+
     const form = document.getElementById('signupForm');
 
     // Email Validation
