--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <!-- Open Graph Meta Tags (For social media sharing) -->
  <meta property="og:title" content="X-Fit - The Future of Fitness">
  <meta property="og:description" content="X-Fit helps you find verified, high-quality gyms in your area with ease. Join the X-Fit movement and get fit without the hassle of endless searching.">
- <meta property="og:image" content="static/images/xfit.jpg">
+ <meta property="og:image" content="https://res.cloudinary.com/dxqdslrdu/image/upload/v1735563206/fitConnect/X-Fit-whiteBG_czsdob.png">
  <meta property="og:url" content="https://xfitclub.in/">
  <meta property="og:type" content="website">
  
@@ -26,7 +26,7 @@
  <meta name="twitter:card" content="summary_large_image">
  <meta name="twitter:title" content="X-Fit - The Future of Fitness">
  <meta name="twitter:description" content="Join the X-Fit movement and easily discover gyms near you. Find verified gyms and fitness spaces that suit your needs.">
- <meta name="twitter:image" content="static/images/xfit.jpg">
+ <meta name="twitter:image" content="https://res.cloudinary.com/dxqdslrdu/image/upload/v1735563206/fitConnect/X-Fit-whiteBG_czsdob.png">
     
     <title>X-Fit-Explore the Best Gyms–Launching Soon</title>
     <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
@@ -319,13 +319,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-66NNJ5XK99"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-18WLZ9P1Y5"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-66NNJ5XK99');
+    gtag('config', 'G-18WLZ9P1Y5');
     </script>
 
 
