--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
  <!-- Title and Description for SEO -->
-<title>X-Fit - The Future of Fitness</title>
+<title>X-Fit -Explore the Best Gyms–Launching Soon</title>
  <meta name="description" content="X-Fit is your go-to platform to find trusted, verified gyms near you. Simplify your fitness journey and discover local gyms with ease. Join the X-Fit movement today!">
  
  <!-- Keywords for SEO -->
@@ -16,7 +16,7 @@
  <meta name="author" content="X-Fit Team">
  
  <!-- Open Graph Meta Tags (For social media sharing) -->
- <meta property="og:title" content="X-Fit - The Future of Fitness">
+ <meta property="og:title" content="X-Fit -Explore the Best Gyms–Launching Soon">
  <meta property="og:description" content="X-Fit helps you find verified, high-quality gyms in your area with ease. Join the X-Fit movement and get fit without the hassle of endless searching.">
  <meta property="og:image" content="https://res.cloudinary.com/dxqdslrdu/image/upload/v1735563206/fitConnect/X-Fit-whiteBG_czsdob.png">
  <meta property="og:url" content="https://xfitclub.in/">
@@ -24,7 +24,7 @@
  
  <!-- Twitter Card Meta Tags -->
  <meta name="twitter:card" content="summary_large_image">
- <meta name="twitter:title" content="X-Fit - The Future of Fitness">
+ <meta name="twitter:title" content="X-Fit -Explore the Best Gyms–Launching Soon">
  <meta name="twitter:description" content="Join the X-Fit movement and easily discover gyms near you. Find verified gyms and fitness spaces that suit your needs.">
  <meta name="twitter:image" content="https://res.cloudinary.com/dxqdslrdu/image/upload/v1735563206/fitConnect/X-Fit-whiteBG_czsdob.png">
     
